# python_examples

./: mkdocs.yml  pyproject.toml
docs/: index.md
docs/stylesheets/: extra.css
python_examples/: loop_ifelse
tests/: test_demo.py
