[tool.poetry]
name = "python-examples"
version = "0.1.0"
description = ""
authors = ["Jesus <tjesus@someemail.com.br>"]
readme = "README.md"
packages = [{include = "python_examples"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
